--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         container_name: 'cinser'
         ports:
           - '8080:8080'
-        environment: 
-          - MONGODB_URI="mongodb://database:27017/cinser"
+        env_file: 
+          - '../.server.env'
         depends_on:
           - database
