--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3'
 services:
+    nginx:
+        image: 'nginx'
+        container_name: : 'nginx'
+        env_file: 
+          - '../.server.env'
+        ports: 
+          - '${NGINX_PORT}:{SERVER_PORT}'
+        volumes: 
+          - './nginx/conf:/etc/nginx:ro'
     database:
         image: 'mongo'
         container_name: 'mongod'
@@ -10,9 +19,9 @@ services:
             context: '../'
             dockerfile: 'deploy/Dockerfile'
         container_name: 'cinser'
-        ports:
-          - '8080:8080'
         env_file: 
           - '../.server.env'
+        ports:
+          - '${SERVER_PORT}:8080'
         depends_on:
           - database
