--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,12 +1,10 @@
-version: '3'
+version: '3.3'
 services:
     nginx:
         image: 'nginx'
-        container_name: : 'nginx'
-        env_file: 
-          - '../.server.env'
+        container_name: 'nginx'
         ports: 
-          - '${NGINX_PORT}:{SERVER_PORT}'
+          - '8200:80'
         volumes: 
           - './nginx/conf:/etc/nginx:ro'
     database:
@@ -15,13 +13,15 @@ services:
         volumes:
           - ./mongo_volume:/data/db
     server:
+        hostname: cinser
         build:
             context: '../'
             dockerfile: 'deploy/Dockerfile'
         container_name: 'cinser'
-        env_file: 
-          - '../.server.env'
+        environment: 
+          - MONGODB_URI=$MONGODB_URI
         ports:
           - '${SERVER_PORT}:8080'
         depends_on:
+          - nginx
           - database
