--- a/deploy/nginx/conf/nginx.conf
+++ b/deploy/nginx/conf/nginx.conf
@@ -1,10 +1,31 @@
-upstream cinema {
-    server localhost:8080
-}
+worker_processes 1;
 
-server {
-    location / {
-        proxy_pass http://cinema;
-        health_check;
+events { worker_connections 512; }
+
+http {
+    sendfile on;
+
+    proxy_set_header   X-Real-IP $remote_addr;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Host $host;
+    proxy_set_header   X-Forwarded-Server $host;
+
+    upstream cinema {
+        server cinser:8080;
+    }
+
+    server {
+        listen 80;
+
+        server_name localhost;
+        
+        location / {
+            proxy_pass http://cinema;
+
+            proxy_set_header   Host $host;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection 'upgrade';
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 }
